got a good outline for contact section, design skills are improving

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,12 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed&display=swap');
+
 * { 
     box-sizing: border-box;
-/*    background: #6a6a75;*/
-    background: black;
+    font-family: 'IBM Plex Sans Condensed', sans-serif;
+    overflow: hidden;
  }
 
 body {
   font-family: sans-serif;
   text-align: center;
+  background: black;
 }
 
 .flex {
@@ -29,6 +32,7 @@ body {
 
 .feskills {
   color: white;
+  font-family: sans-serif;
   -webkit-text-stroke: 1px black;
   font-size: 7em;
   transform: skewY(15deg);
@@ -44,8 +48,8 @@ body {
   position: absolute;
   background: none;
   opacity: 0.1;
-  top: 50px;
-  left: 350px;
+  top: 90px;
+  left: 700px;
 }
 
 .addMargin {
@@ -117,37 +121,38 @@ body {
 
 label {
   font-weight: bold;
+  font-size: 1.2em;
   position: relative;
-  text-shadow: 1px 1px black /*rgb(107, 184, 255)*/;
+  text-align: left;
+  text-shadow: 2px 2px black /*rgb(107, 184, 255)*/;
 }
 
 .main-form > input {
-  /*background: rgba(115, 120, 128, 0.7);*/
-  /*background: inherit;*/
   background: white;
   border-radius: 3px;
-  height: 2em;
+  height: 2.8em;
   margin: 1vh 0;
   color:rgb(171, 173, 175);
 }
 
 .main-btn {
+  align-self: flex-end;
   font-family: 'IBM Plex Sans Condensed', sans-serif;
   background-color: rgb(107, 184, 255);
   border: 3px solid #33ffff;
   border-radius: 1rem;
   color: black;
   text-decoration: none;
-  height: 38px;
   width: auto;
+  height: 38px;
   max-width: 5rem;
   outline: none;
-  font-weight: 500;
+  font-weight: 800;
   margin-top: 1.5em;
+  padding: 0.3em;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
-  
   -webkit-box-shadow: -1px 2px 0px rgb(102, 111, 120);
   -moz-box-shadow: -1px 2px 0px rgb(102, 111, 120);
   box-shadow: -1px 2px 0px rgb(102, 111, 120);
