--- a/css/recent.css
+++ b/css/recent.css
@@ -1,12 +1,5 @@
-* { 
-    box-sizing: border-box;
-/*    background: #6a6a75;*/
-    background: #d0d7db;
- }
-
-body {
-  font-family: sans-serif;
-  text-align: center;
+#recent {
+  background: #d0d7db;
 }
 
 .flex {
@@ -39,7 +32,7 @@ body {
   -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.6)));
 }
 
-.watermark {
+.watermark-recent {
   height: 800px;
   position: absolute;
   background: none;
