--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed&display=swap');
-
+/*@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed&display=swap');
+*/
 * { 
     box-sizing: border-box;
     font-family: 'IBM Plex Sans Condensed', sans-serif;
