--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body{
-    background: #d0d7db;
+/*    background: #d0d7db;  
+*/
     font-family: sans-serif;
     text-align: center;
 }
@@ -11,6 +12,7 @@ body{
 }
   
   #wrapper {
+    background-image: url('https://images.unsplash.com/photo-1491466424936-e304919aada7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1649&q=80');
     padding-top: 10%;
     width: 100%; 
     height: 100vh;   
