--- a/css/recent.css
+++ b/css/recent.css
@@ -1,5 +1,5 @@
-#recent {
-  background: #d0d7db;
+body {
+ background: #d0d7db;
 }
 
 .flex {
@@ -13,11 +13,11 @@
 
 .flexchild {
   display: flex;
-  flex-direction: column;
   align-items: center;
   background: transparent;
   flex-basis: 100%;
   flex: 1;
+  flex-direction: column;
 }
 
 .feskills {
