--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,23 @@ body{
 }
   
   #wrapper {
-    background-image: url('https://images.unsplash.com/photo-1491466424936-e304919aada7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1649&q=80');
-    padding-top: 10%;
+/*    background-image: url('https://images.unsplash.com/photo-1491466424936-e304919aada7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1649&q=80');
+*/    padding-top: 10%;
     width: 100%; 
     height: 100vh;   
 }
 
+
+video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  filter: brightness(58%);
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
 
     .navbtn{
         margin: 0 0.5rem;
