--- a/css/skills.css
+++ b/css/skills.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:ital,wght@1,300&display=swap');
 
+* { 
+    box-sizing: border-box;
+ }
+
 body {
   font-family: 'IBM Plex Sans Condensed', sans-serif;
   text-align: center;
