--- a/css/recent.css
+++ b/css/recent.css
@@ -1,5 +1,16 @@
-body {
+/*body {
  background: #d0d7db;
+}*/
+
+video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  filter: brightness(58%);
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .flex {
