--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:ital,wght@1,100&display=swap');
 
 body{
-/*    background: #d0d7db;  
-*/
     font-family: sans-serif;
     text-align: center;
 }
@@ -14,8 +12,7 @@ body{
 }
   
   #wrapper {
-/*    background-image: url('https://images.unsplash.com/photo-1491466424936-e304919aada7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1649&q=80');
-*/    padding-top: 10%;
+    padding-top: 10%;
     width: 100%; 
     height: 100vh;   
 }
@@ -115,8 +112,6 @@ video {
     width: 200px;
     background: #fff;
     border: 2px groove #dce1e8;
-    /*border-radius: 8px;*/
-    /*background-image: url("https://jordizle.com/static/img/codepen/blank.png");*/
     -webkit-touch-callout: none;
     -moz-touch-callout: none;
     -ms-touch-callout: none;
@@ -142,20 +137,25 @@ video {
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
     text-align: center;
-    /*color: #1b9bd8;*/
     -webkit-transition: color 600ms;
     -moz-transition: color 600ms;
     -ms-transition: color 600ms;
     -o-transition: color 600ms;
-    transition: color 600ms; }
-    /*.cube > div > div.cube-image.active {
-      color: red; }*/
+    transition: color 600ms; 
+}
   
+  .cubeImg{
+        height: 10vh;
+        width: auto;
+    }
+
   .cube > div:hover {
-    cursor: pointer; }
+    cursor: pointer; 
+}
   
   .cube > div:active {
-    cursor: pointer; }
+    cursor: pointer; 
+}
   
   .cube > div:first-child {
     -webkit-transform: rotateX(90deg) translateZ(100px);
@@ -211,7 +211,7 @@ video {
   object:hover {
     opacity: 1; }
   
- /* @media (max-width: 640px) {
+ /*@media (max-width: 640px) {
     .viewport {
       -webkit-transform: scale(0.6, 0.6);
       -moz-transform: scale(0.6, 0.6);
