--- a/css/skills.css
+++ b/css/skills.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:ital,wght@1,300&display=swap');
 
-* { 
+* {
     box-sizing: border-box;
  }
 
@@ -8,6 +8,23 @@ body {
   font-family: 'IBM Plex Sans Condensed', sans-serif;
   text-align: center;
   background: #32323e;
+}
+
+nav {
+  width: 100%;
+  background: black;
+  display: flex;
+  justify-content: space-around;
+  padding: 1.2em 0;
+}
+
+a {
+  color: white;
+}
+
+a:hover {
+  text-transform: none;
+  text-decoration: none;
 }
 
 .flex {
