--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,6 @@
 /*@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed&display=swap');
 */
-* { 
+* {
     box-sizing: border-box;
     font-family: 'IBM Plex Sans Condensed', sans-serif;
     overflow: hidden;
@@ -10,6 +10,14 @@ body {
   font-family: sans-serif;
   text-align: center;
   background: black;
+}
+
+nav {
+  width: 100%;
+  background: black;
+  display: flex;
+  justify-content: space-around;
+  padding: 1.2em 0;
 }
 
 .flex {
