--- a/css/recent.css
+++ b/css/recent.css
@@ -2,16 +2,38 @@
  background: #d0d7db;
 }*/
 
-video {
+* {
+  box-sizing: border-box;
+  background: #32323e;
+  font-family: 'IBM Plex Sans Condensed', sans-serif;
+}
+
+a {
+  color: white;
+}
+
+a:hover {
+  text-transform: none;
+  text-decoration: none;
+}
+
+nav {
+  width: 100%;
+  background: black;
+  display: flex;
+  justify-content: space-around;
+  padding: 1.2em 0;
+}
+/* video {
   object-fit: cover;
   width: 100vw;
   height: 100vh;
   position: fixed;
-  filter: brightness(10%);
+  filter: brightness(35%);
   top: 0;
   left: 0;
   z-index: -1;
-}
+} */
 
 .flex {
   display: flex;
@@ -43,6 +65,11 @@ video {
   -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.6)));
 }
 
+.d-block, .w-100 {
+  margin-left: 2em;
+  z-index: 100;
+}
+
 .watermark-recent {
   height: 800px;
   position: absolute;
@@ -50,6 +77,7 @@ video {
   opacity: 0.2;
   top: 50px;
   left: 350px;
+  z-index: 0;
 }
 
 .addMargin {
@@ -57,7 +85,6 @@ video {
 }
 
 .main-btn {
-  font-family: 'IBM Plex Sans Condensed', sans-serif;
   background-color: rgb(107, 184, 255);
   border: 3px solid #33ffff;
   border-radius: 1rem;
@@ -72,7 +99,7 @@ video {
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
-  
+
   -webkit-box-shadow: -1px 2px 0px rgb(102, 111, 120);
   -moz-box-shadow: -1px 2px 0px rgb(102, 111, 120);
   box-shadow: -1px 2px 0px rgb(102, 111, 120);
@@ -92,7 +119,7 @@ video {
   top:4px;
 }
 
-@keyframes bouncing {
+ @keyframes bouncing {
     0% {bottom: 0;}
     50% {bottom: 20px;}
     100% {bottom: 0;}
@@ -122,3 +149,7 @@ video {
 .slide {
   height: 8em;
 }
+
+/*.d-block:hover .cover {
+    opacity: 1;
+}*/
