--- a/css/contact.css
+++ b/css/contact.css
@@ -1,8 +1,11 @@
-/*@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed&display=swap');
-*/
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed&display=swap');
+
 * {
     box-sizing: border-box;
     font-family: 'IBM Plex Sans Condensed', sans-serif;
+    background: #32323e;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
  }
 
@@ -18,6 +21,24 @@ nav {
   display: flex;
   justify-content: space-around;
   padding: 1.2em 0;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  background: inherit;
+}
+
+a:hover {
+  text-transform: none;
+  text-decoration: none;
+  color: #579dff;
+}
+
+.active {
+  color: #579dff;
+  font-style: italic;
+  border-bottom: 4px solid #00fac0;
 }
 
 .flex {
@@ -40,8 +61,10 @@ nav {
 
 .feskills {
   color: white;
+  padding-top: .3em;
   font-family: sans-serif;
   -webkit-text-stroke: 1px black;
+  opacity: 100% !important;
   font-size: 7em;
   transform: skewY(15deg);
   background: transparent;
@@ -51,13 +74,22 @@ nav {
   -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.6)));
 }
 
-.watermark {
+/* .watermark {
   height: 800px;
   position: absolute;
   background: none;
-  opacity: 0.1;
+  opacity: 0.2;
   top: 90px;
   left: 700px;
+} */
+
+/* https://coder-coder.com/background-image-opacity/ */
+
+.watermark {
+  /* background-position: center; */
+  background-position: 50% 50%;
+  background-size: cover;
+  opacity: 0.2;
 }
 
 .addMargin {
@@ -75,27 +107,6 @@ nav {
   background: radial-gradient(circle at 100px 100px, #000, #fff);
   box-shadow: 0 0 30px rgba(115, 120, 128, 0.4);
 
-}
-
-@keyframes bouncing {
-    0% {bottom: 0;}
-    50% {bottom: 20px;}
-    100% {bottom: 0;}
-}
-
-.next {
-    animation: bouncing 5s infinite ease-in-out;
-    bottom: 0;
-    display: block;
-    height: 20px;
-    left: 50%;
-    margin-left: -25px;
-    position: absolute;
-    width: 50px;
-}
-
-.next:hover {
-    box-shadow: 2px 2px 20px #00fac0;
 }
 
 .hide {
@@ -132,6 +143,7 @@ label {
   font-size: 1.2em;
   position: relative;
   text-align: left;
+  background: inherit;
   text-shadow: 2px 2px black /*rgb(107, 184, 255)*/;
 }
 
