--- a/css/recent.css
+++ b/css/recent.css
@@ -1,20 +1,11 @@
-/*body {
- background: #d0d7db;
-}*/
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed&display=swap');
 
 * {
   box-sizing: border-box;
   background: #32323e;
   font-family: 'IBM Plex Sans Condensed', sans-serif;
-}
-
-a {
-  color: white;
-}
-
-a:hover {
-  text-transform: none;
-  text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
 
 nav {
@@ -23,6 +14,24 @@ nav {
   display: flex;
   justify-content: space-around;
   padding: 1.2em 0;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  background: inherit;
+}
+
+a:hover {
+  text-transform: none;
+  text-decoration: none;
+  color: #579dff;
+}
+
+.active {
+  color: #579dff;
+  font-style: italic;
+  border-bottom: 4px solid #00fac0;
 }
 /* video {
   object-fit: cover;
@@ -55,6 +64,7 @@ nav {
 
 .feskills {
   color: white;
+  font-family: sans-serif;
   -webkit-text-stroke: 1px black;
   font-size: 7em;
   transform: skewY(15deg);
@@ -117,27 +127,6 @@ nav {
   box-shadow: 0px 0px 0px #388bff;
   position:relative;
   top:4px;
-}
-
- @keyframes bouncing {
-    0% {bottom: 0;}
-    50% {bottom: 20px;}
-    100% {bottom: 0;}
-}
-
-.next {
-    animation: bouncing 5s infinite ease-in-out;
-    bottom: 0;
-    display: block;
-    height: 20px;
-    left: 50%;
-    margin-left: -25px;
-    position: absolute;
-    width: 50px;
-}
-
-.next:hover {
-    box-shadow: 2px 2px 20px #00fac0;
 }
 
 .hide {
