--- a/css/contact.css
+++ b/css/contact.css
@@ -6,14 +6,9 @@
     background: #32323e;
     margin: 0;
     padding: 0;
-    overflow: hidden;
  }
 
-body {
-  font-family: sans-serif;
-  text-align: center;
-  background: black;
-}
+body { text-align: center; }
 
 nav {
   width: 100%;
@@ -59,20 +54,7 @@ a:hover {
   flex: 1;
 }
 
-.feskills {
-  color: white;
-  padding-top: .3em;
-  font-family: sans-serif;
-  -webkit-text-stroke: 1px black;
-  opacity: 100% !important;
-  font-size: 7em;
-  transform: skewY(15deg);
-  background: transparent;
-  text-shadow: 2px 2px 20px #00fac0;
-  position: relative;
-  z-index: 50;
-  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.6)));
-}
+
 
 /* .watermark {
   height: 800px;
@@ -87,8 +69,11 @@ a:hover {
 
 .watermark {
   /* background-position: center; */
+  /* background-position: 50% 50%; */
+  background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
+  background: url("images/loaf-message-3.svg");
   opacity: 0.2;
 }
 
@@ -96,25 +81,37 @@ a:hover {
   margin-top: 150px;
 }
 
-.scene {
-  margin: 40px 0;
+.feskills {
+  color: white;
+  padding-top: .3em;
+  font-family: sans-serif;
+  -webkit-text-stroke: 1px black;
+  opacity: 100% !important;
+  font-size: 7em;
+  transform: skewY(15deg);
+  background: transparent;
+  text-shadow: 2px 2px 20px #00fac0;
+  z-index: 1;
   position: relative;
-  width: 210px;
-  height: 140px;
-  margin: 80px auto;
-  perspective: 1000px;
-  border-radius: 60%;
-  background: radial-gradient(circle at 100px 100px, #000, #fff);
-  box-shadow: 0 0 30px rgba(115, 120, 128, 0.4);
-
+  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.6)));
 }
 
-.hide {
-  display: none;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* form styles */
-
 
 .main-form {
   display: flex;
@@ -138,12 +135,12 @@ a:hover {
   box-shadow: 0 20px 35px 0 rgba(115, 120, 128, 0.4);
 }
 
-label {
+.main-form > label {
   font-weight: bold;
   font-size: 1.2em;
   position: relative;
   text-align: left;
-  background: inherit;
+  background: none;
   text-shadow: 2px 2px black /*rgb(107, 184, 255)*/;
 }
 
