--- a/css/recent.css
+++ b/css/recent.css
@@ -2,7 +2,6 @@
 
 * {
   box-sizing: border-box;
-  background: #32323e;
   font-family: 'IBM Plex Sans Condensed', sans-serif;
   margin: 0;
   padding: 0;
@@ -28,7 +27,7 @@ a:hover {
   color: #579dff;
 }
 
-.active {
+.activeNav {
   color: #579dff;
   font-style: italic;
   border-bottom: 4px solid #00fac0;
@@ -49,6 +48,7 @@ a:hover {
   align-content: center;
   flex-direction: row;
   flex-wrap: wrap;
+  background: #32323e;
   width: 100%;
   height: 100vh;
 }
@@ -78,6 +78,22 @@ a:hover {
 .d-block, .w-100 {
   margin-left: 2em;
   z-index: 100;
+}
+
+.carousel-item .description {
+  position: absolute;
+  padding: 3em 1.5em;
+  background: rgba(0, 0, 0, 0.6);
+  height: 100%;
+  width: 100%;
+  top: 0px;
+  color: white;
+  visibility: hidden;
+  transition: all 1s;
+}
+
+.carousel-item:hover .description {
+  visibility: visible;
 }
 
 .watermark-recent {
@@ -138,7 +154,3 @@ a:hover {
 .slide {
   height: 8em;
 }
-
-/*.d-block:hover .cover {
-    opacity: 1;
-}*/
