--- a/css/recent.css
+++ b/css/recent.css
@@ -7,6 +7,16 @@
   padding: 0;
 }
 
+body { max-height: 100vh; }
+
+::-webkit-scrollbar {
+display: none;
+}
+
+::-webkit-scrollbar-thumb {
+background: #00fac0;
+}
+
 nav {
   width: 100%;
   background: black;
@@ -32,32 +42,22 @@ a:hover {
   font-style: italic;
   border-bottom: 4px solid #00fac0;
 }
-/* video {
-  object-fit: cover;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  filter: brightness(35%);
-  top: 0;
-  left: 0;
-  z-index: -1;
-} */
 
 .flex {
   display: flex;
-  align-content: center;
+  /* align-content: center; */
   flex-direction: row;
   flex-wrap: wrap;
   background: #32323e;
   width: 100%;
-  height: 100vh;
+  height: 93vh;
 }
 
 .flexchild {
   display: flex;
-  align-items: center;
-  background: transparent;
   flex-basis: 100%;
+  align-items: center;
+  justify-content: center;
   flex: 1;
   flex-direction: column;
 }
@@ -97,6 +97,16 @@ a:hover {
   visibility: visible;
 }
 
+.descLink {
+  color: #00fac0;
+}
+
+.subtext {
+  color: #ccc;
+  font-style: oblique;
+  padding-top: 0.8em;
+}
+
 .watermark-recent {
   height: 800px;
   position: absolute;
@@ -105,10 +115,6 @@ a:hover {
   top: 50px;
   left: 350px;
   z-index: 0;
-}
-
-.addMargin {
-  margin-top: 150px;
 }
 
 .main-btn {
@@ -144,14 +150,4 @@ a:hover {
   box-shadow: 0px 0px 0px #388bff;
   position:relative;
   top:4px;
-}
-
-.hide {
-  display: none;
-}
-
-/*bootstrap overrides */
-
-.slide {
-  height: 8em;
 }
