--- a/css/recent.css
+++ b/css/recent.css
@@ -122,6 +122,10 @@ a:hover {
   opacity: 1;
 }
 
+.bb {
+  border-bottom: 3px solid #579dff;
+}
+
 .descLink {
   color: #00fac0;
 }
@@ -129,7 +133,7 @@ a:hover {
 .subtext {
   color: #ccc;
   font-style: oblique;
-  padding-top: 0.8em;
+  padding-top: 1.2em;
 }
 
 .watermark-recent {
