--- a/css/recent.css
+++ b/css/recent.css
@@ -80,12 +80,12 @@ a:hover {
 @-webkit-keyframes glow {
     from {
      color: #fff;
-   text-shadow: 0 0 10px #00fac0, 0 0 20px #00fac0, 0 0 30px #00fac0, 0 0 40px #00fac0, 0 0 50px #00fac0, 0 0 50px #00fac0, 0 0 50px #00fac0, 0 0 50px #00fac0;
+   text-shadow: 0 0 5px #00fac0, 0 0 10px #00fac0, 0 0 15px #00fac0, 0 0 20px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0;
  }
 
  to {
     color: #fff;
-   text-shadow: 0 0 20px #00fac0, 0 0 30px #00fac0, 0 0 40px #00fac0, 0 0 50px #00fac0, 0 0 50px #00fac0, 0 0 50px #00fac0, 0 0 50px #00fac0, 0 1 50px #00fac0;
+   text-shadow: 0 0 10px #00fac0, 0 0 15px #00fac0, 0 0 20px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 1 25px #00fac0;
  }
 }
 
@@ -107,18 +107,18 @@ a:hover {
   position: absolute;
   padding: 3em 1.5em;
   background: rgba(0, 0, 0, 0.8);
+  padding-left: 5.5em;
+  padding-right: 5.5em;
   border-radius: 1em;
   height: 100%;
   width: 100%;
   top: 0px;
   color: white;
   opacity: 0;
-  /* visibility: hidden; */
   transition: ease-in .8s;
 }
 
 .carousel-item:hover .description {
-  /* visibility: visible; */
   opacity: 1;
 }
 
