--- a/css/recent.css
+++ b/css/recent.css
@@ -43,6 +43,19 @@ a:hover {
   border-bottom: 4px solid #00fac0;
 }
 
+@media screen and (min-device-width: 400px) and (max-device-width: 960px) {
+  .flex {
+    flex-direction: row;
+  }
+
+  .flexchild {
+    flex-direction: row;
+  }
+
+  .feskills {
+  }
+}
+
 .flex {
   display: flex;
   /* align-content: center; */
@@ -105,10 +118,8 @@ a:hover {
 
 .carousel-item .description {
   position: absolute;
-  padding: 3em 1.5em;
-  background: rgba(0, 0, 0, 0.8);
-  padding-left: 7em;
-  padding-right: 7em;
+  padding: 3em 8.5em;
+  background: rgba(0, 0, 0, 0.9);
   border-radius: 1em;
   height: 100%;
   width: 100%;
@@ -157,11 +168,11 @@ a:hover {
   max-width: 5rem;
   outline: none;
   font-weight: 500;
-  margin-top: 1.5em;
+  margin-top: 5em;
+  padding: 0.5em 0.8em;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
-
   -webkit-box-shadow: -1px 2px 0px rgb(102, 111, 120);
   -moz-box-shadow: -1px 2px 0px rgb(102, 111, 120);
   box-shadow: -1px 2px 0px rgb(102, 111, 120);
