--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,11 @@ body{
     font-family: 'IBM Plex Sans Condensed', sans-serif;
 }
 
-  #wrapper {
+::-webkit-scrollbar {
+display: none;
+}
+
+#wrapper {
     padding-top: 10%;
     width: 100%;
     height: 100vh;
@@ -29,7 +33,7 @@ video {
   width: 100vw;
   height: 100vh;
   position: fixed;
-  filter: brightness(58%);
+  filter: brightness(70%);
   top: 0;
   left: 0;
   z-index: -1;
