--- a/css/skills.css
+++ b/css/skills.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:ital,wght@1,300&display=swap');
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -16,6 +14,7 @@ nav {
   width: 100%;
   background: black;
   display: flex;
+  font-style: italic;
   justify-content: space-around;
   padding: 1.2em 0;
 }
@@ -29,7 +28,9 @@ a {
 a:hover {
   text-transform: none;
   text-decoration: none;
-  color: #579dff;
+  font-weight: 600;
+  font-size: 1.15em;
+  color: #00fac0;
 }
 
 .active {
