--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@ video {
 }
 
   .cubeImg{
-        height: 10vh;
+        /* height: 10vh; */
         width: auto;
     }
 
@@ -264,8 +264,8 @@ video {
     }
 
     .instruct {
-        font-size: 0.8rem;
-       /* right: 637px;*/
+        font-size: 1.1em;
+        /* right: 637px;*/
         color: rgba(255, 255, 255, 0.5);
         font-style: italic;
         position: absolute;
@@ -274,27 +274,40 @@ video {
         bottom: 10px;
         transform: translate(-50%, -50%);
         font-weight: 800;
-    }
+      }
 
-    #showNav {
-      color: white;
-    }
+      #showNav {
+        color: white;
+      }
 
-.next {
-    animation: bouncing 5s infinite ease-in-out;
-    bottom: 0;
-    display: block;
-    height: 20px;
-    left: 50%;
-    margin-left: -25px;
-    position: absolute;
-    width: 50px;
-}
 
-.next:hover {
-    box-shadow: 2px 2px 20px #00fac0;
-}
+    @media screen and (min-device-width: 200px) and (max-device-width: 550px) {
+      .classicNav {
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        font-weight: 300;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        background: rgba(255, 255, 255, 0.6);
+      }
 
-.hide {
-  display: none;
-}
+      .classicNav > li > a {
+        color: #579dff;
+        font-size: 2em;
+        padding: 0 0 .5em .9em;
+      }
+
+      .classicNav > li > a:hover {
+        color: #00fac0;
+      }
+
+      .instruct {
+        font-size: 1.7em;
+      }
+    }/* end media query*/
