--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,13 @@ body{
 }
 
 ::-webkit-scrollbar {
-display: none;
+  display: none;
+}
+
+/* HIDE THE iPHONE PLAY BUTTON */
+*::-webkit-media-controls-start-playback-button {
+  display: none!important;
+  -webkit-appearance: none;
 }
 
 #wrapper {
@@ -28,16 +34,16 @@ a {
     text-transform: none;
 }
 
-video {
-  object-fit: cover;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  filter: brightness(70%);
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
+    video {
+      object-fit: cover;
+      width: 100vw;
+      height: 100vh;
+      position: fixed;
+      filter: brightness(70%);
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
 
     .navbtn{
         margin: 0 0.5rem;
@@ -91,7 +97,21 @@ video {
     -ms-transform: scale(0.8, 0.8);
     -o-transform: scale(0.8, 0.8);
     transform: scale(0.8, 0.8);
-    -webkit-box-reflect: below 170px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0%, transparent), to(rgba(250, 250, 250, 0.4))); }
+    -webkit-box-reflect: below 170px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0%, transparent), to(rgba(250, 250, 250, 0.4)));
+   }
+
+   .homeImg {
+      display: none;
+   }
+
+   .homeText {
+     color: white;
+     font-size: 2.6em;
+   }
+
+   hr {
+     border-bottom: 2px solid #00fac0;
+   }
 
   .cube {
     position: relative;
@@ -133,7 +153,7 @@ video {
     height: 200px;
     display: flex;
     flex-direction: column;
-    align-items:center;
+    align-items: center;
     justify-content: center;
     background: white;
     -webkit-transform: rotate(180deg);
@@ -282,6 +302,15 @@ video {
 
 
     @media screen and (min-device-width: 200px) and (max-device-width: 550px) {
+
+      .cube {
+        display: none;
+      }
+
+      .homeImg {
+          display: block;
+        }
+
       .classicNav {
         top: 0;
         bottom: 0;
