hide the iPhone play button

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,16 @@ body{
   -webkit-appearance: none;
 }
 
+*::-webkit-media-controls-play-button {
+  display: none!important;
+  -webkit-appearance: none;
+}
+
+*::-webkit-media-controls-panel {
+  display: none!important;
+  -webkit-appearance: none;
+}
+
 #wrapper {
     padding-top: 10%;
     width: 100%;
