nav looking good, just need a close button

--- a/css/main.css
+++ b/css/main.css
@@ -345,6 +345,11 @@ a {
         display: none;
       }
 
+      .miniNav > li > a {
+        padding-left: 0.7em;
+        color: #579dff;
+      }
+
         .classicNav {
           display: none;
           position: fixed;
