--- a/css/main.css
+++ b/css/main.css
@@ -350,6 +350,17 @@ a {
         color: #579dff;
       }
 
+      .close {
+        cursor: pointer;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+      }
+
+      .close > img {
+        height: 85px;
+      }
+
         .classicNav {
           display: none;
           position: fixed;
