--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,10 @@ body{
   -webkit-appearance: none;
 }
 
+video::-webkit-media-controls {
+    display:none !important;
+}
+
 #wrapper {
     padding-top: 10%;
     width: 100%;
