small design tweak home page

--- a/css/main.css
+++ b/css/main.css
@@ -354,6 +354,10 @@ a {
         color: #579dff;
       }
 
+      .miniNav > li > a:hover {
+        border-bottom: #00fac0;
+      }
+
       .close {
         cursor: pointer;
         position: absolute;
