--- a/css/contact.css
+++ b/css/contact.css
@@ -10,6 +10,18 @@
 
 body { text-align: center; }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+.burger {
+  display: none;
+}
+
+.miniNav {
+  display: none;
+}
+
 nav {
   width: 100%;
   background: black;
@@ -192,6 +204,58 @@ a:hover {
     flex-wrap: wrap;
     width: 100%;
     height: 100vh;
+  }
+
+  nav {
+    display: none;
+  }
+
+  .burger {
+    display: block;
+    position: fixed;
+    cursor: pointer;
+    top: 30px;
+    left: 30px;
+  }
+
+  .burger > img {
+    height: 80px;
+  }
+
+  .cube {
+    display: none;
+  }
+
+  .homeImg {
+    display: block;
+  }
+
+  .miniNav {
+    display: none;
+    background: white;
+  }
+
+  .miniNav > li > a {
+    padding-left: 0.7em;
+    background: rgba(255, 255, 255, 0.9);
+    color: #579dff;
+  }
+
+  .miniNav > li > a:hover {
+    border-bottom: #00fac0;
+  }
+
+  .close {
+    cursor: pointer;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.9);
+    top: 15px;
+    right: 15px;
+  }
+
+  .close > img {
+    height: 85px;
+    background: rgba(255, 255, 255, 0.9);
   }
 
   .main-form {
