responsive fixes for recent

--- a/css/recent.css
+++ b/css/recent.css
@@ -70,13 +70,72 @@ a:hover {
 
   .carousel-head{
     color: white;
-    font-size: 2.5em;
+    font-size: 5em;
     margin-bottom: 0.5em;
   }
 
   .carousel {
     margin-right: 3em;
   }
+
+  nav {
+    display: none;
+  }
+
+  .burger {
+    display: block;
+    position: fixed;
+    cursor: pointer;
+    top: 30px;
+    left: 30px;
+  }
+
+  .burger > img {
+    height: 80px;
+  }
+
+  .miniNav {
+    display: none;
+    background: white;
+  }
+
+  .miniNav > li > a {
+    padding-left: 0.7em;
+    color: #579dff;
+  }
+
+  .miniNav > li > a:hover {
+    border-bottom: #00fac0;
+  }
+
+  .close {
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+  }
+
+  .close > img {
+    height: 85px;
+  }
+
+  .main-btn {
+    width: 12em;
+    height: 5em;
+  }
+
+  .burger {
+    display: block;
+    position: fixed;
+    cursor: pointer;
+    top: 30px;
+    left: 30px;
+  }
+
+  .burger > img {
+    height: 80px;
+  }
+
 }/*end media query */
 
 /*large screens */
@@ -103,6 +162,9 @@ a:hover {
   .carousel-head{
     display: none;
   }
+
+
+
 }/*end media query */
 
 .feskills {
@@ -175,6 +237,7 @@ a:hover {
   color: #ccc;
   font-style: oblique;
   padding-top: 1.2em;
+  font-size: 2em;
 }
 
 .watermark-recent {
