responsive fixes for skills page

--- a/css/skills.css
+++ b/css/skills.css
@@ -10,6 +10,23 @@ body {
   background: #32323e;
 }
 
+
+::-webkit-scrollbar {
+display: none;
+}
+
+::-webkit-scrollbar-thumb {
+background: #00fac0;
+}
+
+.burger {
+  display: none;
+}
+
+.miniNav {
+  display: none;
+}
+
 nav {
   width: 100%;
   background: black;
@@ -66,7 +83,7 @@ a:hover {
   background: transparent;
   text-shadow: 2px 2px 20px #579dff;
   position: relative;
-  z-index: 50;
+  z-index: 2;
   -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.6)));
 }
 
@@ -178,3 +195,66 @@ a:hover {
 .hide {
   display: none;
 }
+
+/* small screens */
+@media screen and (min-device-width: 320px) and (max-device-width: 960px) {
+nav {
+  display: none;
+}
+
+.burger {
+  display: block;
+  position: fixed;
+  cursor: pointer;
+  top: 30px;
+  left: 30px;
+}
+
+.burger > img {
+  height: 80px;
+}
+
+.miniNav {
+  display: none;
+  background: white;
+}
+
+.miniNav > li > a {
+  padding-left: 0.7em;
+  color: #579dff;
+}
+
+.miniNav > li > a:hover {
+  border-bottom: #00fac0;
+}
+
+.close {
+  cursor: pointer;
+  position: absolute;
+  opacity: 1;
+  top: 15px;
+  right: 15px;
+}
+
+.close > img {
+  height: 85px;
+}
+
+.main-btn {
+  width: 12em;
+  height: 5em;
+}
+
+.burger {
+  display: block;
+  position: fixed;
+  cursor: pointer;
+  top: 30px;
+  left: 30px;
+}
+
+.burger > img {
+  height: 80px;
+}
+
+}/*end media query */
