--- a/css/writings.css
+++ b/css/writings.css
@@ -8,8 +8,11 @@
 }
 
 body {
-  max-height: 100vh;
+  height: 100vh;
   background: #32323e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
  }
 
 ::-webkit-scrollbar {
@@ -44,4 +47,11 @@ a:hover {
   color: #579dff;
   font-style: italic;
   border-bottom: 4px solid #00fac0;
+}
+
+.soon {
+  background: rgba(105, 105, 105, 0.8);
+  padding: 5em 3.5em;
+  font-size: 1.7em;
+  border: 2px solid #579dff;
 }
