--- a/css/contact.css
+++ b/css/contact.css
@@ -26,6 +26,7 @@ nav {
   width: 100%;
   background: black;
   display: flex;
+  font-style: italic;
   justify-content: space-around;
   padding: 1.2em 0;
 }
@@ -39,7 +40,9 @@ a {
 a:hover {
   text-transform: none;
   text-decoration: none;
-  color: #579dff;
+  font-weight: 600;
+  font-size: 1.15em;
+  color: #00fac0;
 }
 
 .active {
