--- a/css/recent.css
+++ b/css/recent.css
@@ -29,6 +29,7 @@ nav {
   width: 100%;
   background: black;
   display: flex;
+  font-style: italic;
   justify-content: space-around;
   padding: 1.2em 0;
 }
@@ -42,13 +43,135 @@ a {
 a:hover {
   text-transform: none;
   text-decoration: none;
-  color: #579dff;
+  font-weight: 600;
+  font-size: 1.15em;
+  color: #00fac0;
 }
 
 .activeNav {
   color: #579dff;
   font-style: italic;
   border-bottom: 4px solid #00fac0;
+}
+
+
+
+.feskills {
+  color: white;
+  font-family: sans-serif;
+  -webkit-text-stroke: 1px black;
+  font-size: 7em;
+  transform: skewY(15deg);
+  background: transparent;
+  text-shadow: 2px 2px 20px #579dff;
+  text-align: center;
+  position: relative;
+  z-index: 50;
+  -webkit-animation: glow 6s ease-in-out infinite alternate;
+  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.6)));
+}
+
+@-webkit-keyframes glow {
+    from {
+     color: #fff;
+   text-shadow: 0 0 5px #00fac0, 0 0 10px #00fac0, 0 0 15px #00fac0, 0 0 20px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0;
+ }
+
+ to {
+    color: #fff;
+   text-shadow: 0 0 10px #00fac0, 0 0 15px #00fac0, 0 0 20px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 1 25px #00fac0;
+ }
+}
+
+.carousel {
+  margin-left: 3em;
+  border-radius: 1em;
+  box-shadow: 10px 10px 30px rgba(0,0,0,0.7);
+}
+
+.carousel:hover {
+  box-shadow: 10px 10px 30px rgba(115, 120, 128, 0.4);
+}
+
+.carousel img {
+  border-radius: 1em;
+}
+
+.carousel-item .description {
+  position: absolute;
+  padding: 3em 8.5em;
+  background: rgba(0, 0, 0, 0.9);
+  border-radius: 1em;
+  height: 100%;
+  width: 100%;
+  top: 0px;
+  color: white;
+  opacity: 0;
+  transition: ease-in .8s;
+}
+
+.carousel-item:hover .description {
+  opacity: 1;
+}
+
+.bb {
+  border-bottom: 3px solid #579dff;
+}
+
+.descLink {
+  color: #00fac0;
+}
+
+.subtext {
+  color: #ccc;
+  font-style: oblique;
+  padding-top: 1.2em;
+  font-size: 1.2em;
+}
+
+.watermark-recent {
+  height: 800px;
+  position: absolute;
+  background: none;
+  opacity: 0.2;
+  top: 50px;
+  left: 350px;
+  z-index: 0;
+}
+
+.main-btn {
+  background-color: rgb(107, 184, 255);
+  border: 3px solid #33ffff;
+  border-radius: 1rem;
+  color: black;
+  text-decoration: none;
+  height: 38px;
+  width: auto;
+  max-width: 5rem;
+  outline: none;
+  font-weight: 500;
+  margin-top: 5em;
+  padding: 0.5em 0.8em;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-box-shadow: -1px 2px 0px rgb(102, 111, 120);
+  -moz-box-shadow: -1px 2px 0px rgb(102, 111, 120);
+  box-shadow: -1px 2px 0px rgb(102, 111, 120);
+}
+
+.main-btn:hover {
+  background: rgb(133, 196, 255);
+  color: black;
+  transition: all 3s;
+}
+
+.main-btn:active {
+   -webkit-box-shadow: 0px 0px 0px #388bff;
+  -moz-box-shadow: 0px 0px 0px #388bff;
+  box-shadow: 0px 0px 0px #388bff;
+  position:relative;
+  top:4px;
 }
 
 /* small screens */
@@ -84,6 +207,10 @@ a:hover {
 
   .carousel {
     margin-right: 3em;
+  }
+
+  .subtext {
+    font-size: 2em;
   }
 
   nav {
@@ -172,124 +299,4 @@ a:hover {
     display: none;
   }
 
-
-
 }/*end media query */
-
-.feskills {
-  color: white;
-  font-family: sans-serif;
-  -webkit-text-stroke: 1px black;
-  font-size: 7em;
-  transform: skewY(15deg);
-  background: transparent;
-  text-shadow: 2px 2px 20px #579dff;
-  text-align: center;
-  position: relative;
-  z-index: 50;
-  -webkit-animation: glow 6s ease-in-out infinite alternate;
-  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.6)));
-}
-
-@-webkit-keyframes glow {
-    from {
-     color: #fff;
-   text-shadow: 0 0 5px #00fac0, 0 0 10px #00fac0, 0 0 15px #00fac0, 0 0 20px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0;
- }
-
- to {
-    color: #fff;
-   text-shadow: 0 0 10px #00fac0, 0 0 15px #00fac0, 0 0 20px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 1 25px #00fac0;
- }
-}
-
-.carousel {
-  margin-left: 3em;
-  border-radius: 1em;
-  box-shadow: 10px 10px 30px rgba(0,0,0,0.7);
-}
-
-.carousel:hover {
-  box-shadow: 10px 10px 30px rgba(115, 120, 128, 0.4);
-}
-
-.carousel img {
-  border-radius: 1em;
-}
-
-.carousel-item .description {
-  position: absolute;
-  padding: 3em 8.5em;
-  background: rgba(0, 0, 0, 0.9);
-  border-radius: 1em;
-  height: 100%;
-  width: 100%;
-  top: 0px;
-  color: white;
-  opacity: 0;
-  transition: ease-in .8s;
-}
-
-.carousel-item:hover .description {
-  opacity: 1;
-}
-
-.bb {
-  border-bottom: 3px solid #579dff;
-}
-
-.descLink {
-  color: #00fac0;
-}
-
-.subtext {
-  color: #ccc;
-  font-style: oblique;
-  padding-top: 1.2em;
-  font-size: 2em;
-}
-
-.watermark-recent {
-  height: 800px;
-  position: absolute;
-  background: none;
-  opacity: 0.2;
-  top: 50px;
-  left: 350px;
-  z-index: 0;
-}
-
-.main-btn {
-  background-color: rgb(107, 184, 255);
-  border: 3px solid #33ffff;
-  border-radius: 1rem;
-  color: black;
-  text-decoration: none;
-  height: 38px;
-  width: auto;
-  max-width: 5rem;
-  outline: none;
-  font-weight: 500;
-  margin-top: 5em;
-  padding: 0.5em 0.8em;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
-  -webkit-box-shadow: -1px 2px 0px rgb(102, 111, 120);
-  -moz-box-shadow: -1px 2px 0px rgb(102, 111, 120);
-  box-shadow: -1px 2px 0px rgb(102, 111, 120);
-}
-
-.main-btn:hover {
-  background: rgb(133, 196, 255);
-  color: black;
-  transition: all 3s;
-}
-
-.main-btn:active {
-   -webkit-box-shadow: 0px 0px 0px #388bff;
-  -moz-box-shadow: 0px 0px 0px #388bff;
-  box-shadow: 0px 0px 0px #388bff;
-  position:relative;
-  top:4px;
-}
