--- a/css/skills.css
+++ b/css/skills.css
@@ -56,6 +56,10 @@ a:hover {
   border-bottom: 4px solid #00fac0;
 }
 
+.smallT {
+  display: none;
+}
+
 .flex {
   display: flex;
   align-content: center;
@@ -105,12 +109,13 @@ a:hover {
   width: 210px;
   height: 140px;
   margin: 80px auto;
-  perspective: 1000px;
+  perspective: 2000px;
   border-radius: 60%;
   background: radial-gradient(circle at 100px 100px, #000, #fff);
   box-shadow: 0 0 30px rgba(115, 120, 128, 0.4);
 
 }
+
 
 .carousel {
   width: 100%;
@@ -124,8 +129,8 @@ a:hover {
 
 .carousel__cell {
   position: absolute;
-  width: 190px;
-  height: 120px;
+  width: 200px;
+  height: 140px;
   left: 10px;
   top: 10px;
   line-height: 116px;
@@ -142,6 +147,27 @@ a:hover {
 
 .carousel__cell > img {
   background: transparent;
+}
+
+.carousel__cell .description {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 0 1em;
+  line-height: normal;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 12px;
+  width: 100%;
+  top: 0px;
+  color: white;
+  opacity: 0;
+  transition: ease-in .8s;
+}
+
+.carousel__cell:hover .description {
+  opacity: 1;
 }
 
 .carousel__cell:nth-child(1) { transform: rotateY(  0deg) translateZ(288px); }
@@ -200,6 +226,26 @@ a:hover {
 @media screen and (min-device-width: 320px) and (max-device-width: 960px) {
 nav {
   display: none;
+}
+
+.feskills {
+  display: none;
+}
+
+.smallT {
+  display: block;
+  color: white;
+  padding: 3em 0;
+  font-size: 5em;
+}
+
+.flex {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100vh;
 }
 
 .burger {
