--- a/css/recent.css
+++ b/css/recent.css
@@ -71,7 +71,7 @@ a:hover {
   -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.6)));
 }
 
-@-webkit-keyframes glow {
+/* @-webkit-keyframes glow {
     from {
      color: #fff;
    text-shadow: 0 0 5px #00fac0, 0 0 10px #00fac0, 0 0 15px #00fac0, 0 0 20px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0;
@@ -81,7 +81,7 @@ a:hover {
     color: #fff;
    text-shadow: 0 0 10px #00fac0, 0 0 15px #00fac0, 0 0 20px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 0 25px #00fac0, 0 1 25px #00fac0;
  }
-}
+} */
 
 .carousel {
   margin-left: 3em;
